--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "inuit-buttons",
+  "name": "aleut-buttons",
   "version": "0.4.2",
-  "description": "A simple, extensible button object for the inuitcss framework",
+  "description": "A simple, extensible button object for the aleutcss framework (based on Harry Roberts inuitcss framework)",
   "main": "_objects.buttons.scss",
   "repository": {
     "type": "git",
-    "url": "https://github.com/inuitcss/objects.buttons.git"
+    "url": "https://github.com/aleutcss/objects.buttons.git"
   },
-  "author": "Harry Roberts <harry@csswizardry.com>",
-  "license": "Apache 2",
+  "contributors": [
+    {"name": "Marius Hauken", "url": "http://twitter.com/mhauken", "email": "hauken@netliferesearch.com"},
+    {"name": "Robin Sandborg", "url": "http://twitter.com/robrobro", "email": "robin@netliferesearch.com"},
+    {"name": "Knut Melvær", "url": "http://twitter.com/kmelve", "email": "knut@netliferesearch.com"},
+    {"name": "Harry Roberts", "email": "harry@csswizardry.com"}
+  ],
+  "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/inuitcss/objects.buttons/issues"
+    "url": "https://github.com/aleutcss/objects.buttons/issues"
   },
-  "homepage": "https://github.com/inuitcss/objects.buttons",
+  "homepage": "https://github.com/aleutcss/objects.buttons",
   "keywords": [
-    "inuitcss",
+    "aleutcss",
+    "aleut",
     "oocss",
     "css"
   ],
   "dependencies": {
-    "inuit-functions": "~0.2.0",
-    "inuit-defaults": "~0.2.0"
+    "aleut-functions": "~0.3.0",
+    "aleut-defaults": "~0.3.0"
   }
 }
