--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "css"
   ],
   "dependencies": {
-    "aleut-functions": "~0.3.0",
-    "aleut-defaults": "~0.3.0"
+    "@aleut/aleut-functions": "~0.3.0",
+    "@aleut/aleut-defaults": "~0.3.0"
   }
 }
