--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@aleut/objects.buttons",
+  "name": "aleut.objects.buttons"
+,
   "version": "1.0.0",
   "description": "A simple, extensible button object for the aleutcss framework (based on Harry Roberts inuitcss framework)",
   "main": "_objects.buttons.scss",
@@ -25,7 +26,8 @@
     "css"
   ],
   "dependencies": {
-    "@aleut/tools.functions": "~1.0.0",
-    "@aleut/settings.defaults": "~1.0.0"
+    "aleut.tools.functions": "~1.0.0",
+    "aleut.settings.defaults": "~1.0.0"
+
   }
 }
